--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
     <nav>
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
+        <a href="#experience">Experience</a>
+        <a href="#skills">Skills</a>
         <a href="#contact">Contact</a>
     </nav>
     <section id="about">
@@ -115,10 +117,48 @@
             </div>
         </div>
     </section>
+    <section id="experience">
+        <h2>Work Experience</h2>
+        <div class="card">
+            <h3>Automation Analyst, Amazon</h3>
+            <p><strong>October 2020 - August 2023</strong></p>
+            <ul>
+                <li>Automated monitoring processes, reducing system runtime by 35%.</li>
+                <li>Spearheaded ETL operations, improving data handling and analysis by 40%.</li>
+                <li>Developed dashboards to visualize key metrics and provide actionable insights.</li>
+                <li>Collaborated with stakeholders to shape data-driven business strategies.</li>
+            </ul>
+        </div>
+        <div class="card">
+            <h3>HR Assistant, Amazon</h3>
+            <p><strong>August 2019 - January 2020</strong></p>
+            <ul>
+                <li>Streamlined employee time management and payroll accuracy by 30% using Kronos.</li>
+                <li>Automated approval workflows, improving efficiency by 50%.</li>
+                <li>Resolved global employee tickets efficiently, enhancing support processes.</li>
+            </ul>
+        </div>
+    </section>
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Python for Data Analysis</li>
+            <li>Power BI</li>
+            <li>SQL</li>
+            <li>ETL Operations</li>
+            <li>Data Visualization</li>
+            <li>Statistical Analysis</li>
+            <li>DAX</li>
+            <li>Tableau</li>
+        </ul>
+    </section>
     <section id="contact">
         <h2>Contact Me</h2>
         <p>
             Feel free to reach out for collaborations or opportunities at <a href="mailto:seshasai39@gmail.com">seshasai39@gmail.com</a>.
+        </p>
+        <p>
+            Connect with me on <a href="https://www.linkedin.com/in/sesha-sai-bellamkonda-99292324a/" target="_blank">LinkedIn</a>.
         </p>
     </section>
     <footer>
